--- a/202-MVC-Boot-MutiActionController-POC/src/main/resources/application.properties
+++ b/202-MVC-Boot-MutiActionController-POC/src/main/resources/application.properties
@@ -5,3 +5,6 @@ server.port=2424
 #view configuration
 spring.mvc.view.prefix=/views/
 spring.mvc.view.suffix=.jsp
+
+#configuring application context , now its mandate to use it in the url to access it
+server.servlet.context-path=/random
